Updating NSQ to 0.3.1.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
-nsq (0.3.0) UNRELEASED; urgency=low
+nsq (0.3.1) unstable; urgency=low
 
   * Updating NSQ package.
+
+ -- Florent Clairambault <florent@xps>  Wed, 04 Feb 2015 03:04:40 +0100
+
+nsq (0.3.0) unstable; urgency=low
+
+  * Updating NSQ package. 
 
  -- Florent Clairambault <florent@xps>  Sun, 23 Nov 2014 19:55:53 +0100
 
