--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nsq (0.3.5) unstable; urgency=low
+
+  * Updating NSQ package.
+
+ -- Stefan Meinecke <meinecke@greensec.de>  Mon, 27 Apr 2015 20:07:00 +0200
+
 nsq (0.3.2) unstable; urgency=low
 
   * Updating NSQ package.
